tdf#118752: Enable firebird migration in experimental mode

Only in 6.1

Revert "Disable migration in this release"

This reverts commit 443da1959d02569c59d064748a06d39c6dbb2f64.

Change-Id: Ib3286b01205ac5360aa299346ee524825e739167