dbaccess/qa/unit/hsql_binary_import.cxx
@@ -40,6 +40,7 @@ void HsqlBinaryImportTest::setUp()
 {
     DBTestBase::setUp();
     SvtMiscOptions aMiscOptions;
+    aMiscOptions.SetExperimentalMode(true);
     osl_setEnvironment(OUString{ "DBACCESS_HSQL_MIGRATION" }.pData, OUString{ "1" }.pData);
 }
 
